table_3/results/ButterKnife-pre-nullaway-wpi.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-wpi-pre/src/src/main/java/butterknife/compiler/FieldTypefaceBinding.java:3: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 462ms
0
